syntax="proto3";

package Common;
option go_package = "service/protos/Common";

message CommonRequest {
}

message CommonReply {
}

message Transform {
  Vector position = 1;
  Vector rotation = 2;
  Vector scale = 3;
}

message Vector {
  string x = 1;
  string y = 2;
  string z = 3;
}

enum BusinessType {
  BUSINESS_NONE = 0;
  COMPANY = 1;
  PERSIONAL = 2;
}

enum EffectTool {
  EFFACT_TOOL_NONE = 0;
  BEAUTIFUL_SKIN = 1;
}

enum ArInteractModule {
  AR_INTERACT_MODULE_NONE = 0;
}

enum ArEditWindowModule {
  AR_EDIT_WINDOW_MODULE_NONE = 0;
  UI_EDIT = 1;
}

enum ProgramState {
  PROGRAM_STATE_NONE = 0;
  OFF_SALE = 1;
  ON_SALE = 2;
}

message PageInfoRequest {
  int32 page_item_count = 1;
  int32 current_page_num = 2;
}

message PageInfoReply {
  int64 total_count = 1;
}

message ErrorReply {
  ErrorCodes code = 1;
  string message = 2;
}

message ErrorReplyGin {
  ErrorCodes code = 1;
  string message = 2;
  string file_name = 3;
  string file_path = 4;
}

enum ErrorCodes {
  ErrorCodes_NONE = 0;
  
  // 權限
  SUCCESS = 10000;
  INVAILD_TOKEN = 10001;
  PERMISSION_DENIED = 10002;
  PROGRAM_NOT_SUPPORT = 10003;
  CONTACT_LIMIT_REACHED = 10004;
  SEATS_LIMIT_REACHED = 10005;

  // API
  INVAILD_PARAM = 20001;
  UNKNOWN_ERROR = 20002;
  REPEATED_ERROR = 20003;
  DATA_NOT_FOUND = 20004;

  // 登入
  LOGIN_CHECK_ID_FAIL = 30001;

  // File
  UPLOAD_FILE_SIZE_INVALID = 40001;
  UPLOAD_FILE_TYPE_NOT_SUPPORT = 40002;
  
  // 信件
  MAIL_STATE_EXPIRE_ERROR = 50001;
  USER_EMAIL_INVAILD  = 50002;
  MAIL_HEAVY_FREQUENTLY = 50003;
  REACH_DAILY_MAIL_LIMIT = 50004;
  EMAIL_IS_VALIDATED  = 50005;
}

enum MailType {
  MAIL_TYPE_NONE = 0;
  MAIL_TYPE_ADMIN = 1;
  MAIL_TYPE_CHILD = 2;
}

enum MailState {
  MAIL_STATE_NONE = 0;
  MAIL_STATE_INVITED = 1;
  MAIL_STATE_EXPIRE = 2;
  MAIL_STATE_CANCEL = 3;
  MAIL_STATE_SUCCESS = 4;
}

enum UploadFileType {
  UPLOAD_FILE_TYPE_NONE = 0;
  IMAGE = 1;
  THREE_D_FILE = 2;
}